--- a/apps/shared/package.json
+++ b/apps/shared/package.json
@@ -8,7 +8,14 @@
         "build": "tsc",
         "dev": "tsc -w"
     },
+    "peerDependencies": {
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0"
+    },
     "devDependencies": {
-        "typescript": "^5.0.0"
+        "typescript": "^5.0.0",
+        "@types/react": "^18.2.0",
+        "@types/react-dom": "^18.2.0",
+        "react": "^18.2.0"
     }
 }
