--- a/backend/package.json
+++ b/backend/package.json
@@ -2,11 +2,11 @@
     "name": "backend",
     "version": "1.0.0",
     "description": "CogneoVerse Backend",
-    "main": "dist/index.js",
+    "main": "dist/server.js",
     "scripts": {
-        "dev": "tsx watch src/index.ts",
+        "dev": "tsx watch server.ts",
         "build": "tsc",
-        "start": "node dist/index.js",
+        "start": "node dist/server.js",
         "lint": "eslint src/**/*.ts",
         "format": "prettier --write src/**/*.ts"
     },
