Update project structure, fix db connection, and cleanup: Remove unused files and sync repo state

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -9,16 +9,16 @@ RUN corepack enable && corepack prepare pnpm@latest --activate
 COPY pnpm-lock.yaml pnpm-workspace.yaml package.json ./
 
 # Copy backend package setup
-COPY apps/backend/package.json ./apps/backend/
+COPY backend/package.json ./backend/
 
 # Install dependencies (frozen-lockfile is safer but in dev sometimes tricky if lockfile out of sync)
 RUN pnpm install --frozen-lockfile
 
 # Copy source
-COPY apps/backend ./apps/backend
+COPY backend ./backend
 
 # Generate Prisma Client
-WORKDIR /app/apps/backend
+WORKDIR /app/backend
 RUN npx prisma generate
 
 # Build
@@ -37,12 +37,12 @@ COPY --from=builder /app/pnpm-lock.yaml .
 COPY --from=builder /app/pnpm-workspace.yaml .
 
 # Copy built backend
-COPY --from=builder /app/apps/backend/package.json ./apps/backend/
-COPY --from=builder /app/apps/backend/dist ./apps/backend/dist
-COPY --from=builder /app/apps/backend/prisma ./apps/backend/prisma
+COPY --from=builder /app/backend/package.json ./backend/
+COPY --from=builder /app/backend/dist ./backend/dist
+COPY --from=builder /app/backend/prisma ./backend/prisma
 
 # Install prod dependencies
-WORKDIR /app/apps/backend
+WORKDIR /app/backend
 RUN pnpm install --prod
 
 # Expose port
@@ -50,3 +50,4 @@ EXPOSE 8000
 
 # Start command
 CMD ["npm", "start"]
+
