--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,14 +1,17 @@
 {
     "compilerOptions": {
-        "target": "es2020",
+        "target": "ES2020",
         "module": "commonjs",
+        "moduleResolution": "node",
         "lib": [
-            "es2020"
+            "ES2020"
         ],
         "strict": true,
+        "noImplicitAny": false,
         "esModuleInterop": true,
         "skipLibCheck": true,
         "forceConsistentCasingInFileNames": true,
+        "resolveJsonModule": true,
         "outDir": "./dist",
         "rootDir": "."
     },
