--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -15,19 +15,20 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.554.0",
     "motion": "^12.23.25",
-    "next": "16.0.4",
+    "next": "15.3.3",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-dropzone": "^14.3.8",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "16.0.4",
+    "eslint-config-next": "15.3.3",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
