--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -5,13 +5,13 @@ WORKDIR /app
 RUN corepack enable && corepack prepare pnpm@latest --activate
 
 COPY pnpm-lock.yaml pnpm-workspace.yaml package.json ./
-COPY apps/frontend/package.json ./apps/frontend/
+COPY frontend/package.json ./frontend/
 
 RUN pnpm install --frozen-lockfile
 
-COPY apps/frontend ./apps/frontend
+COPY frontend ./frontend
 
-WORKDIR /app/apps/frontend
+WORKDIR /app/frontend
 RUN pnpm build
 
 # --- Runtime Stage ---
@@ -23,10 +23,11 @@ RUN corepack enable && corepack prepare pnpm@latest --activate
 
 ENV NODE_ENV=production
 
-COPY --from=builder /app/apps/frontend/public ./public
-COPY --from=builder /app/apps/frontend/.next/standalone ./
-COPY --from=builder /app/apps/frontend/.next/static ./.next/static
+COPY --from=builder /app/frontend/public ./public
+COPY --from=builder /app/frontend/.next/standalone ./
+COPY --from=builder /app/frontend/.next/static ./.next/static
 
 EXPOSE 3000
 
 CMD ["node", "server.js"]
+
