--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,7 @@
     "gsap": "^3.13.0",
     "lucide-react": "^0.554.0",
     "motion": "^12.23.25",
-    "next": "16.0.4",
+    "next": "15.3.3",
     "ogl": "^1.0.11",
     "react": "19.2.0",
     "react-dom": "19.2.0",
@@ -34,13 +34,14 @@
     "three": "^0.181.2"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "baseline-browser-mapping": "^2.9.5",
     "eslint": "^9",
-    "eslint-config-next": "16.0.4",
+    "eslint-config-next": "15.3.3",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
