--- a/backend/render.yaml
+++ b/backend/render.yaml
@@ -3,7 +3,7 @@ services:
     name: cogneoverse-backend
     env: node
     rootDir: .
-    buildCommand: cd backend && npm install && npm run build
+    buildCommand: cd backend && npm install --include=dev && npm run build
     startCommand: cd backend && npm start
     envVars:
       - key: DATABASE_URL
